# fauxstodian

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
programs/vault/: README.md
programs/vault/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
programs/vault/tests/: functional.rs
service/: Cargo.toml  README.md  build.rs
service/proto/: fauxstodian.proto
service/src/: api.rs  config.rs  entity.rs  lib.rs  main.rs  server.rs  status.rs
service/src/driver/: error.rs  get_account_balance.rs  helpers.rs  mod.rs  rpc.rs  solana_rpc.rs
service/src/service/: core.rs  error.rs  get_account_balance.rs  grpc_service.rs  helpers.rs  mod.rs  parse_pub_key.rs
