[package]
name = "fauxstodian"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the fauxstodian gRPC server
name = "fauxstodian-server"
path = "src/server.rs"

[dependencies]
prost = "0.12.1"
tonic = "0.10.2"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
solana-client = "1.17.4"
solana-sdk = "1.17.4"

[build-dependencies]
tonic-build = "0.10.2"
