[package]
name = "fauxstodian"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
prost = "0.12.1"
solana-client = "1.17.4"
solana-sdk = "1.17.4"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
