[package]
name = "fauxstodian"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
env_logger = "0.10.1"
log = "0.4.20"
prost = "0.12.1"
solana-client = "1.17.4"
solana-sdk = "1.17.4"
thiserror = "1.0.50"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
tonic-health = "0.10.2"
vault = { version = "0.1.0", path = "../programs/vault", features = [
    "no-entrypoint",
] }

[build-dependencies]
tonic-build = "0.10.2"
